# tidycop-hotspots

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: dc_robbery_forecast.py
tests/: test_features.py  test_grid.py  test_integrations.py  test_model.py  test_validate.py
tidycop_hotspots/: __init__.py  cli.py  features.py  grid.py  integrations.py  model.py  validate.py
