[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tidycop-hotspots"
version = "0.1.1"
description = "Crime hot spot forecasting with random forests — companion to tidycop"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Colin Drane", email = "colin@spotcrime.com" },
]
keywords = [
    "crime",
    "hotspot",
    "forecasting",
    "random-forest",
    "risk-terrain",
    "spatial-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "geopandas>=0.14",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "shapely>=2.0",
]

[project.optional-dependencies]
tidycop = ["tidycop>=0.3"]
viz = ["matplotlib>=3.7", "folium>=0.14"]
all = ["tidycop-hotspots[tidycop,viz]"]
dev = [
    "tidycop-hotspots[all]",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
tidycop-hotspots = "tidycop_hotspots.cli:main"

[project.urls]
Homepage = "https://github.com/colinmac-boop/tidycop-hotspots"
Repository = "https://github.com/colinmac-boop/tidycop-hotspots"
"Bug Tracker" = "https://github.com/colinmac-boop/tidycop-hotspots/issues"
"tidycop" = "https://github.com/colinmac-boop/tidycop"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
